force-app/main/default/objects/Fulfillment_Event__c/Fulfillment_Event__c.object-meta.xml
<CustomObject>
    <label>Fulfillment Event</label>
    <nameField>
        <displayFormat>Event-{00000}</displayFormat>
        <label>Fulfillment Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fulfillment Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>