force-app/main/default/objects/Fulfillment_Event__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <label>Contracted Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Fulfillment Events</relationshipLabel>
    <relationshipName>Fulfillment_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>