force-app/main/default/objects/Fulfillment_Event__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Event Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>