force-app/main/default/objects/Fulfillment_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Attrition</fullName>
            </value>
            <value>
                <fullName>Billing Provider Change</fullName>
            </value>
            <value>
                <fullName>License Key Assignment</fullName>
            </value>
            <value>
                <fullName>License Qty Change</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>Service Change</fullName>
            </value>
            <value>
                <fullName>Shipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>