force-app/main/default/objects/Fulfillment_Event__c/fields/License_Metric_Quantity__c.field-meta.xml
<CustomField>
    <fullName>License_Metric_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>License Metric Quantity</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>