force-app/main/default/objects/Fulfillment_Event__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <formula>Asset__r.Product__r.Name</formula>
    <label>Product</label>
    <type>Text</type>
</CustomField>