force-app/main/default/objects/Fulfillment_Event__c/recordTypes/Fulfillment_Event.recordType-meta.xml
<RecordType>
    <fullName>Fulfillment_Event</fullName>
    <active>true</active>
    <description>Record type that the new and migrated records will be mapped to</description>
    <label>Fulfillment Event</label>
</RecordType>